Galaxy UI complete, planet started

--- a/templates/layouts/base.twig
+++ b/templates/layouts/base.twig
@@ -1,11 +1,13 @@
+<!DOCTYPE html>
 <html>
     <head>
-        <title>Galaxy Tracker</title>
+        <title>Space Tracker - {% block pagename %}{% endblock %}</title>
     </head>
     <body>
     {% include "partials/_header.twig" %}
-    <main = id="app">
-    {% block main %}{% endblock %}
+    <main id="app"
+    {% block main %}
+    {% endblock %}
     </main>
     {% include "partials/_footer.twig" %}
     </body>
