--- a/templates/views/planet/show.twig
+++ b/templates/views/planet/show.twig
@@ -1,13 +1,13 @@
-<h1>{{ galaxy.name }}</h1>
+<h1>{{ planets.name }}</h1>
 
 <p>
-    <strong> Name: </strong> {{ galaxy.name }} <br />
-    <strong> Size: </strong> {{ galaxy.size }} <br />
-    <strong> Description: </strong> {{ galaxy.description }} <br />
+    <strong> Name: </strong> {{ planets.name }} <br />
+    <strong> Size: </strong> {{ planets.size }} <br />
+    <strong> Description: </strong> {{ planets.description }} <br />
     </p>
 
     <p>
-        <a href="/galaxies/{{ galaxy.id }}/edit">Edit This Galaxy</a><br />
-        <a href="/galaxies/{{ galaxy.id }}/delete">Remove This Galaxy</a><br />
-        <a href="/galaxies/">All</a><br />
+        <a href="/planets/{{ planets.id }}/edit">Edit This Planet</a><br />
+        <a href="/planets/{{ planets.id }}/delete">Remove This Planet</a><br />
+        <a href="/planets/">All</a><br />
     </p>
