--- a/templates/views/star/create.twig
+++ b/templates/views/star/create.twig
@@ -1,5 +1,5 @@
-<h1> Create Planet</h1>
+<h1> Create Galaxy</h1>
 {% block pagename %}{% endblock %}
 {% block main %}
-{% include '/views/planet/_form.twig' %}
+{% include '/views/galaxy/_form.twig' %}
 {% endblock %}
