stars ui functionality  complete, image functionality added

--- a/templates/views/star/_form.twig
+++ b/templates/views/star/_form.twig
@@ -1,19 +1,19 @@
 {% if galaxy is defined %}
-    <form action="/galaxies/{{ galaxy.id }}" method="POST">
-    <input type="hidden" value="{{galaxy.id }}" />
+    <form action="/stars/{{ star.id }}" method="POST">
+    <input type="hidden" value="{{star.id }}" />
     {% else %}
-    <form action="/galaxies" method="POST">
+    <form action="/stars" method="POST">
 {% endif %}
 
      {% block main %}
-    <a href="/galaxies">Home</a>
+    <a href="/stars">Home</a>
     <div class="control">
         <label>Name:</label>
         <input 
             type="text"
             name="name" 
-            {% if galaxy is defined %}
-            value="{{ galaxy.name }}"
+            {% if star is defined %}
+            value="{{ star.name }}"
             {% endif %}
         />
     </div>
@@ -22,20 +22,47 @@
         <input 
             type="integer"
             name="size" 
-            {% if galaxy is defined %}
-            value="{{ galaxy.size }}"
+            {% if star is defined %}
+            value="{{ star.size }}"
             {% endif %}
         />
     </div>
 
      <div class="control">
         <label>Description:</label>
-        <textarea name="description">{{ galaxy.description }}</textarea>
+        <textarea name="description">{{ star.description }}</textarea>
     </div>
 
      <button type="submit">
-     {% if galaxy is defined %}Update{% else %}Create{% endif %} Galaxy
+     {% if star is defined %}Update{% else %}Create{% endif %} Star
      </button> 
 </form> 
+<form
+  enctype="multipart/form-data"
+  method="POST"
+  action="/images/{% if image.id %}{{ image.id }}{% endif %}">
+  {% if image.id %}
+    <input type="hidden" name="id" value="{{ image.id }}">
+  {% endif %}
+  <div>
+    <label>Parent Variant:</label>
+    <select name="variantId">
+      <option>Select Variant...</option>
+      {% for variant in variants %}
+        <option value="{{ variant.id }}" {% if variant.id == image.variantId %}selected="selected"{% endif %}>
+          {{ variant.title }}
+        </option>
+      {% endfor %}
+    </select>
+  </div>
+  <div>
+    <label for="image">Upload Image:</label>
+    <br />
+    <input type="file" name="image" id="image" />
+  </div>
+  <div>
+    <input type="submit" type="submit" />
+  </div>
+</form>
 
 {% endblock %}
