--- a/templates/views/star/show.twig
+++ b/templates/views/star/show.twig
@@ -1,13 +1,13 @@
-<h1>{{ galaxy.name }}</h1>
+<h1>{{ stars.name }}</h1>
 
 <p>
-    <strong> Name: </strong> {{ galaxy.name }} <br />
-    <strong> Size: </strong> {{ galaxy.size }} <br />
-    <strong> Description: </strong> {{ galaxy.description }} <br />
+    <strong> Name: </strong> {{ stars.name }} <br />
+    <strong> Size: </strong> {{ stars.size }} <br />
+    <strong> Description: </strong> {{ stars.description }} <br />
     </p>
 
     <p>
-        <a href="/galaxies/{{ galaxy.id }}/edit">Edit This Galaxy</a><br />
-        <a href="/galaxies/{{ galaxy.id }}/delete">Remove This Galaxy</a><br />
-        <a href="/galaxies/">All</a><br />
+        <a href="/stars/{{ stars.id }}/edit">Edit This Star</a><br />
+        <a href="/stars/{{ stars.id }}/delete">Remove This Star</a><br />
+        <a href="/stars/">All</a><br />
     </p>
