--- a/templates/views/star/create.twig
+++ b/templates/views/star/create.twig
@@ -1,5 +1,8 @@
-<h1> Create Galaxy</h1>
-{% block pagename %}{% endblock %}
+<h1> Create Star</h1>
+{% block pagename %}
+
+{% endblock %}
+
 {% block main %}
-{% include '/views/galaxy/_form.twig' %}
+{% include '/views/star/_form.twig' %}
 {% endblock %}
