--- a/templates/views/star/edit.twig
+++ b/templates/views/star/edit.twig
@@ -1,5 +1,5 @@
-<h1> Edit {{Galaxy.name}}</h1>
-{% block pagename %}Edit {{Galaxy.name}}{% endblock %}
+<h1> Edit {{Star.name}}</h1>
+{% block pagename %}Edit {{Star.name}}{% endblock %}
 {% block main %}
-{% include 'views/galaxy/_form.twig' with { "galaxy": galaxy} %}
+{% include 'views/star/_form.twig' with { "star": star} %}
 {% endblock %}
